--- a/server-app/package.json
+++ b/server-app/package.json
@@ -1,14 +1,12 @@
 {
   "name": "server-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev server.ts"
+    "dev": "ts-node-dev server.ts",
+    "build": "tsc",
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -22,6 +20,8 @@
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/mongoose": "^5.11.96",
-    "ts-node-dev": "^2.0.0"
+    "@types/node": "^20.11.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.0"
   }
 }
